--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -47,7 +47,7 @@
   <div id="contents">
     <img src="AI.jpg" width="100%">
 
-    <h1>AI Industry Trends</h1><br><br><br>
+    <h1>AI Industry Trends[Lv.2]</h1><br><br><br>
 
 
 
@@ -168,12 +168,23 @@
       문 대통령"AI 1등 국가... 사람 중심 4차 산업혁명"</a><br>
 
     <a href="https://www.youtube.com/watch?v=0nAI_TheOJ8" target="_blank" title="한국AI기술">
-      일본은 상상도 못할 인공지능 기술을 한국이 세계에 공개</a><br>
+      일본은 상상도 못할 인공지능 기술을 한국이 세계에 공개</a><br><br><br>
 
+
+
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
 
 
   <br><br><br>
+
+
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
