--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -47,15 +47,15 @@
   <div id="contents">
     <img src="Blizzard_games.jpg" width="100%">
 
-  <h1>Game Industry Trends</h1><br><br><br>
+  <h1>Game Industry Trends[Lv.4]</h1><br><br><br>
 
 
 
 
-  <h2>[The next catastrophe - June 27-July 3rd 2020]</h2>
+  <a><h2>[The next catastrophe - June 27-July 3rd 2020]</h2></a>
 
   <p>
-    <h3>The world this week - Politics</h3>
+    <a><h3>The world this week - Politics</h3></a>
 
     Some states in the south and west of the United States recorded their biggest daily rise in cases of covid-19, bringing America's total to over 2.3m. The governor of Texas, Greg Abbott, urged people to stay indoors. He also declared that the state remained "wide open for business". California recorded new highs in hospital admissions. Connecticut, New Jersey and New York are to quarantine visitors  from states that are covid hotspots.<br><br>
 
@@ -93,7 +93,7 @@
 
     Prosecutors from a court in The Hague said they were charging Hashim Thaci, the president of Kosovo, with war crimes, murder and torture relating to the period during and immediately after the war there in 1999. Mr Thaci had been about to attend a summit at the White House, but cancelled his visit.<br><br>
 
-    <h3>The world this week - Business</h3>
+    <a><h3>The world this week - Business</h3></a>
 
     The IMF drastically reduced its outlook for the world economy, projecting that it will contract by 4.9% this year. The downward revision was across the board; all regions will suffer shrinkage. America's GDP is now expected to fall by 8%, Britain's and the euro area's both by 10.2% and Japan's by 5.8% Most emerging markets will fare little better. China, though, is forecast to grow by 1%.<br><br>
 
@@ -123,10 +123,10 @@
   </p>
 
 
-  <h2>[The new world disorder - June 20th-26th 2020]</h2>
+  <a><h2>[The new world disorder - June 20th-26th 2020]</h2></a>
 
   <p>
-    <h3>The world this week - Politics</h3>
+    <a><h3>The world this week - Politics</h3></a>
 
     Brazil reported a record 35,000 new cases of covid-10 in a day. Even that grim figure is widely regarded as an undercount. India is now recording tens of thousands of new infections each week. In america, Florida, Texas and Arizona set daily records for new cases. Although many places are easing lockdowns, Anthony Fauci, the leading adviser to the White House on infectious diseases, warned that the pandemic is far from over: "The numbers speak for themselves."<br><br>
 
@@ -160,7 +160,7 @@
 
     A judge overseeing a corruption trial in the <b>Democratic Republic of Congo</b> was murdered. Police initially said that the judge had had a heart attack, but an autopsy showed he had died from brain injuries after being stabbed in the head.<br><br>
 
-    <h3>The world this week - Business</h3>
+    <a><h3>The world this week - Business</h3></a>
 
     The <b>Federal Reserve</b> clarified its new bond-buying strategy, announcing that it would acquire individual corporate bonds on the secondary market. This comes on top of its purchases in exchange-traded funds, which include some junk-rated funds that track debt. But the central bank's latest move comes almost three months after it first announced emergency measures to shore up markets. Questions have been raised about the length of time it has taken to roll out some of its programmes.<br><br>
 
@@ -516,11 +516,22 @@
       저는 해적선을 보고 싶어요.
       모두가 바다에 둥둥 떠 있는 모습은 보고 싶지 않아요.
       - 제노바 첸(저니, 스카이, 플라워 등을 개발한 댓게임컴퍼니의 대표이자 크리에이티브 디렉터)
-    </p><br>
+    </p><br><br><br>
+
+
+
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
 
 
   <br><br><br>
+
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
