--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -47,115 +47,125 @@
   <div id="contents">
     <img src="Merriam_Webster's.jpg" width="100%">
 
-    <h1>Merriam Webster's</h1><br><br><br>
+  <h1>Merriam Webster's[Lv.1]</h1><br><br><br>
 
 
 
-    [July 9th,2020]
+  <a>[July 9th,2020]</a>
 
-    <p>
-      Scanning the future for risks and taking proper note of what you see is a mark of prudent maturity. It is also a salutary expansion of the imagination. Governments which take seriously ways the near future could be quite unlike the recent past might find new avenues to explore and a new interest in sustaining their achievements well beyond a few turns of the electoral cycle. That is exactly the sort of attitude that stewwardship of the environment and the containment of armed conflict retuire. It can also be a relief. Almost all the large asteroids which can come close to the Earth have now  been found. None is a near-term threat. The world is not just a demonstrably safer place than it seemed. It is also a better place for having found it out.
-    </p><br>
-
-
-    [July 5th,2020]
-
-    <p>
-      One of the Fed's innovations was to offer longer-term swaps lasting 84 days. The first of these matured on June 11th, reducing the amount of dollars outstanding by almost $92bn. If the foreign banks that had borrowed these dollars (through the Bank of England's and the European Central Bank's swap lines with the Fed) still needed them, they would have rolled them over. But they did not--suggesting that the swaps had eased much of the stress that motivated them.
-    </p><br>
+  <p>
+    Scanning the future for risks and taking proper note of what you see is a mark of prudent maturity. It is also a salutary expansion of the imagination. Governments which take seriously ways the near future could be quite unlike the recent past might find new avenues to explore and a new interest in sustaining their achievements well beyond a few turns of the electoral cycle. That is exactly the sort of attitude that stewwardship of the environment and the containment of armed conflict retuire. It can also be a relief. Almost all the large asteroids which can come close to the Earth have now  been found. None is a near-term threat. The world is not just a demonstrably safer place than it seemed. It is also a better place for having found it out.
+  </p><br>
 
 
-    [July 3rd, 2020]
+  <a>[July 5th,2020]</a>
 
-    <p>
-      To the agencies, and every other analyst of the country, India has always been a paradox. Its economy is large but its people are poor. Its institutions are strong enough to warrant an investment-grade rating, but its policymaking is not. Its public debt is high, its foreign debt modest. To these long-standing paradoxes, some observers add another. India, they say, is like a Monet painting. Up close, it's a big old mess. But from afar it still has the power to <b>beguile</b>.
-    </p><br>
-
-
-    [July 2nd, 2020]
-
-    <p>
-      In fact, Tencent could be a force for good if it promotes mobile gaming globally. More than two-thirds of Chinese gamers play on their smartphones, compared with just over a third of American ones; the latter have five years of catching up to do. Tencent also hopes to develop cloud-gaming, in which 5G smart phones and faster connectivity enable players to stream games as easily as films, and increase use of augmented and virtual reality in mobiles gaming. The trouble is that its partner in both endeavours in China is Huawei, which will raise hackles in America. Expect to hear more about Tencent's global gaming <b>prowess</b> in the future. Tencent, of course, will hope that his attention is not because it, too, gets caught up in Sino-American bangs and explosions.
-    </p><br>
+  <p>
+    One of the Fed's innovations was to offer longer-term swaps lasting 84 days. The first of these matured on June 11th, reducing the amount of dollars outstanding by almost $92bn. If the foreign banks that had borrowed these dollars (through the Bank of England's and the European Central Bank's swap lines with the Fed) still needed them, they would have rolled them over. But they did not--suggesting that the swaps had eased much of the stress that motivated them.
+  </p><br>
 
 
-    [July 1st, 2020]
+  <a>[July 3rd, 2020]</a>
 
-    <p>
-      Brad Smith, the president of Microsoft, has said that instead of asking what AI can do, humans need to think about what it should do. The technological limits of naive, fallible AI, in other words, will lead humans to impose additional political and social limits upon it. Clever algorithms will have to fit into a world that is full of humans, and, in theory at least, run by them. Artificial intelligence is both powerful and limited. As that realization spreads, some of the dreams of high summer will fade in the autumnal chill.
-    </p><br>
-
-
-    [June 30th, 2020]
-
-    <p>
-      <b>data wrangling</b><br>
-      Data wrangling, sometimes referred to as data munging, is the process of transforming and mapping data from one "raw" data form into another format with the intent of making it more appropriate and valuable for a variety of downstream purposes such as analytics. A data wrangler is a person who performs these transformation operations.<br>
-
-      This may include further munging, data visualization, data aggregation, training a statistical model, as well as many other potential uses. Data munging as a process typically follows a set of general steps which begin with extracting the data in a raw form from the data source, "munging" the raw data using algorithms (e.g. sorting) or parsing the data into predefined data structures, and finally depositing the resulting content into a data sink for storage and future use.<br><br>
-
-      <b>postmortem</b><br>
-      (adj)done, occurring, or collected after death<br>
-      following the event<br>
-      (n)an analysis or discussion of an event after it is over<br>
-    </p><br>
+  <p>
+    To the agencies, and every other analyst of the country, India has always been a paradox. Its economy is large but its people are poor. Its institutions are strong enough to warrant an investment-grade rating, but its policymaking is not. Its public debt is high, its foreign debt modest. To these long-standing paradoxes, some observers add another. India, they say, is like a Monet painting. Up close, it's a big old mess. But from afar it still has the power to <b>beguile</b>.
+  </p><br>
 
 
-    [June 29th, 2020]
+  <a>[July 2nd, 2020]</a>
 
-    <p>
-      This Technology Quarterly will investigate why enthusiasm is stalling. It will argue that although modern AI techniques are powerful, they are also limited, and they can be troublesome and difficult to deploy. Those hoping to make use of AI's potential must confront two sets of problems.<br><br>
-
-      The first is practical. The machine-learning revolution has been built on three things: improved algorithms, more powerful computers on which to run them, and--thanks to the gradual digitisation of society--more data from which they can learn. Yet data are not always readily available. It is hard to use AI to monitor covid-19 transmission without a comprehensive database of everyone's movements, for instance. Even when data do exist, they can contain hidden assumptions that can trip the <b>unwary</b>. The newest AI systems' demand for computing power can be expensive. Large organisations always take time to integrate new technologies: think of electricity in the 20th century or the cloud in the 21st. None of this necessarily reduces AI's potential, but it has the effect of slowing its adoption.<br><br>
-
-      The second set of problems runs deeper, and concerns the algorithms themselves. Machine learning uses thousands or millions of examples to train a software model (the structure of which is loosely based on the neural architecture of the brain). The resulting systems can do some tasks, such as recognising images or speech, far more reliably than those programmed the traditional way with hand-crafted rules, but they are not "intelligent" in the way that most people understand the term. They are powerful pattern-recognition tools, but lack many cognitive abilities that biological brains take for granted. They struggle with reasoning, generalising from the rules they discover, and with the general-purpose savoir faire that researchers, for want of a more precise description, dub "common sense". The result is an artificial idiot savant that can excel at well-bounded tasks, but can get things very wrong if faced with unexpected input.
-    </p><br>
+  <p>
+    In fact, Tencent could be a force for good if it promotes mobile gaming globally. More than two-thirds of Chinese gamers play on their smartphones, compared with just over a third of American ones; the latter have five years of catching up to do. Tencent also hopes to develop cloud-gaming, in which 5G smart phones and faster connectivity enable players to stream games as easily as films, and increase use of augmented and virtual reality in mobiles gaming. The trouble is that its partner in both endeavours in China is Huawei, which will raise hackles in America. Expect to hear more about Tencent's global gaming <b>prowess</b> in the future. Tencent, of course, will hope that his attention is not because it, too, gets caught up in Sino-American bangs and explosions.
+  </p><br>
 
 
-    [June 28th, 2020]
+  <a>[July 1st, 2020]</a>
 
-    <p>
-      Large-scale social change is hard.
-      Protest movements have a habit of <b>antagonising</b> the moderate supporters they need to succeed.
-      Countries where the impulse for change is not <b>harnessed</b> to specific reforms will find that it <b>dissipates</b>.
-      Yet anyone who thinks racism is too difficult to tackle might recall that just six years before George Floyd was born,
-      interracial marriage was still illegal in 16 American states.
-      Today about 90% of Americans support it.
-      When enough citizens march against an injustice, they can prevail.
-      That is the power of protest.
-    </p><br>
+  <p>
+    Brad Smith, the president of Microsoft, has said that instead of asking what AI can do, humans need to think about what it should do. The technological limits of naive, fallible AI, in other words, will lead humans to impose additional political and social limits upon it. Clever algorithms will have to fit into a world that is full of humans, and, in theory at least, run by them. Artificial intelligence is both powerful and limited. As that realization spreads, some of the dreams of high summer will fade in the autumnal chill.
+  </p><br>
 
 
-    [Fabuarary 1st, 2020]
+  <a>[June 30th, 2020]</a>
 
-    <p>
-      <b>Embezzle</b>: to appropriate fraudulently to one's own use<br>
-      <b>Refurbish</b>: to brighten or freshen up<br>
-      <b>Interim</b>: (n)an intervening time
-      / (adj)lying, occuring, or functioning within the limiting boundaries
-      / belonging to mental or spiritual life
-      / belonging to the inner constitution or concealed nature of something
-      / lying awy or remote from the border or shore
-    </p><br>
+  <p>
+    <b>data wrangling</b><br>
+    Data wrangling, sometimes referred to as data munging, is the process of transforming and mapping data from one "raw" data form into another format with the intent of making it more appropriate and valuable for a variety of downstream purposes such as analytics. A data wrangler is a person who performs these transformation operations.<br>
+
+    This may include further munging, data visualization, data aggregation, training a statistical model, as well as many other potential uses. Data munging as a process typically follows a set of general steps which begin with extracting the data in a raw form from the data source, "munging" the raw data using algorithms (e.g. sorting) or parsing the data into predefined data structures, and finally depositing the resulting content into a data sink for storage and future use.<br><br>
+
+    <b>postmortem</b><br>
+    (adj)done, occurring, or collected after death<br>
+    following the event<br>
+    (n)an analysis or discussion of an event after it is over<br>
+  </p><br>
 
 
-    [January 31th, 2020]
+  <a>[June 29th, 2020]</a>
 
-    <p>
-      <b>Binge</b>: a drunken revel
-      / an unrestrained and often excessve indulgence
-      / an act of excessive or compulsieve consumption
-      / a social gathering<br>
-      <b>Lurch</b>: a sudden roll of a ship to one side
-      /an abrupt jerking, swaying, or tipping movement<br>
-      <b>Sleazy</b>: lacking firmness of texture
-      / marked by low character or quality
-    </p><br>
+  <p>
+    This Technology Quarterly will investigate why enthusiasm is stalling. It will argue that although modern AI techniques are powerful, they are also limited, and they can be troublesome and difficult to deploy. Those hoping to make use of AI's potential must confront two sets of problems.<br><br>
 
+    The first is practical. The machine-learning revolution has been built on three things: improved algorithms, more powerful computers on which to run them, and--thanks to the gradual digitisation of society--more data from which they can learn. Yet data are not always readily available. It is hard to use AI to monitor covid-19 transmission without a comprehensive database of everyone's movements, for instance. Even when data do exist, they can contain hidden assumptions that can trip the <b>unwary</b>. The newest AI systems' demand for computing power can be expensive. Large organisations always take time to integrate new technologies: think of electricity in the 20th century or the cloud in the 21st. None of this necessarily reduces AI's potential, but it has the effect of slowing its adoption.<br><br>
+
+    The second set of problems runs deeper, and concerns the algorithms themselves. Machine learning uses thousands or millions of examples to train a software model (the structure of which is loosely based on the neural architecture of the brain). The resulting systems can do some tasks, such as recognising images or speech, far more reliably than those programmed the traditional way with hand-crafted rules, but they are not "intelligent" in the way that most people understand the term. They are powerful pattern-recognition tools, but lack many cognitive abilities that biological brains take for granted. They struggle with reasoning, generalising from the rules they discover, and with the general-purpose savoir faire that researchers, for want of a more precise description, dub "common sense". The result is an artificial idiot savant that can excel at well-bounded tasks, but can get things very wrong if faced with unexpected input.
+  </p><br>
+
+
+  <a>[June 28th, 2020]</a>
+
+  <p>
+    Large-scale social change is hard.
+    Protest movements have a habit of <b>antagonising</b> the moderate supporters they need to succeed.
+    Countries where the impulse for change is not <b>harnessed</b> to specific reforms will find that it <b>dissipates</b>.
+    Yet anyone who thinks racism is too difficult to tackle might recall that just six years before George Floyd was born,
+    interracial marriage was still illegal in 16 American states.
+    Today about 90% of Americans support it.
+    When enough citizens march against an injustice, they can prevail.
+    That is the power of protest.
+  </p><br>
+
+
+  <a>[Fabuarary 1st, 2020]</a>
+
+  <p>
+    <b>Embezzle</b>: to appropriate fraudulently to one's own use<br>
+    <b>Refurbish</b>: to brighten or freshen up<br>
+    <b>Interim</b>: (n)an intervening time
+    / (adj)lying, occuring, or functioning within the limiting boundaries
+    / belonging to mental or spiritual life
+    / belonging to the inner constitution or concealed nature of something
+    / lying awy or remote from the border or shore
+  </p><br>
+
+
+  <a>[January 31th, 2020]</a>
+
+  <p>
+    <b>Binge</b>: a drunken revel
+    / an unrestrained and often excessve indulgence
+    / an act of excessive or compulsieve consumption
+    / a social gathering<br>
+    <b>Lurch</b>: a sudden roll of a ship to one side
+    /an abrupt jerking, swaying, or tipping movement<br>
+    <b>Sleazy</b>: lacking firmness of texture
+    / marked by low character or quality
+  </p><br><br><br>
+
+
+
+    <script>
+      var exp = document.querySelectorAll('#contents > a');
+      var level = exp.length/10 - (exp.length%10)/10;
+      document.write("EXP: " + exp.length + "<br>");
+      document.write("LEVEL: " + level);
+    </script>
 
 
 
   <br><br><br>
+
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
