--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -47,12 +47,15 @@
   <div id="contents">
   <img src="battlecruiser.jpg" width="100%">
 
-    <h1>Science & Technology</h1><br><br><br>
+    <h1>Science & Technology[Lv.3]</h1><br><br><br>
 
 
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=tHEDNgV5gFY" target="_blank" title="에스오디">
+      반도체 수출 규제 후 1년, 지금 유튜브에서 가장 현실적인 수출규제를 말해드립니다.</a><br>
 
     <a href="https://www.youtube.com/watch?v=hdVl8oKHkys" target="_blank" title="에스오디">
       이 썸네일을 쓰는 채널들이 여러분을 어떻게 속이는지 적나라하게 보여드립니다</a><br>
@@ -166,11 +169,22 @@
       중국이 만들어낸 미친 물질... 한계를 뛰어넘은 중국의 소름돋는 기술력</a><br>
 
     <a href="https://www.youtube.com/watch?v=iaZS0CGZz5A" target="_blank" title="배터리">
-      배터리 치킨게임 시작 시점 분석</a><br>
+      배터리 치킨게임 시작 시점 분석</a><br><br><br>
+
+
+
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
 
 
   <br><br><br>
+
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
