--- a/The_economist.html
+++ b/The_economist.html
@@ -47,10 +47,24 @@
   <div id="contents">
   <img src="Economist-Never-stop-questioning.png" width="100%">
 
-  <h1>The Economist</h1><br><br><br>
+  <h1>The Economist[Lv.19]</h1><br><br><br>
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=jD6pdWPESVs" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    [부자들의 습관 버티는 기술] 제2강. 투자 설계도(저자 직강)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RzOJtkNf3eY" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    [부자들의 습관 버티는 기술] 제1강. 뼈대있는 재테크(저자 직강)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=cS-Pj6MaFXc" target="_blank" title="삼프로TV_경제의신과함께">
+    중국의 무서운 랠리.. 미국 덕분?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=CnKjLCrK70w" target="_blank" title="삼프로TV_경제의신과함께">
+    지표 회복의 각이 무너지고 있다? f.김효진</a><br>
 
   <a href="https://www.youtube.com/watch?v=G115duITIcg" target="_blank" title="삼프로TV_경제의신과함께">
     보고싶은 것만 보는 시장, 주식, 채권, 원자재로 분리해보라</a><br>
@@ -640,15 +654,22 @@
     18년 구글플레이 상반기 매출순위를 보고 얻은 깨달음</a><br>
 
   <a href="https://www.youtube.com/watch?v=uwsxI-4UgKo" target="_blank" title="슈카월드">
-    제목만 봐도 귀에 들렸던 국민곡이 사라지고 있다? 파편화되는 음악 시장</a><br>
+    제목만 봐도 귀에 들렸던 국민곡이 사라지고 있다? 파편화되는 음악 시장</a><br><br><br>
 
 
 
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
 
 
+  <br><br><br>
 
-  <br>
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
