--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -47,7 +47,7 @@
   <div id="contents">
     <img src="懲毖錄2.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.6]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
@@ -56,6 +56,18 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=MvEmNtqt_p4" title="Red Pig Academy">
+    삼국지 최고의 풍운아[임용한의 진짜 三國志_19]여포의 마지막 불꽃</a><br>
+
+  <a href="https://www.youtube.com/watch?v=MZ5P2ZqHUV8" title="Red Pig Academy">
+    놈놈놈-시리즈2탄[임용한의 진짜 三國志_18]세 남자가 사는 법</a><br>
+
+  <a href="https://www.youtube.com/watch?v=cU3UamZvJi8" title="Red Pig Academy">
+    여포가 유비의 부하였더라면?![임용한의 진짜 三國志_17]놈.놈.놈 시리즈1탄</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dgJwX3FiuH0" title="Red Pig Academy">
+    유비에게 간손미란?[임용한의 진짜 三國志_16]아주 소중한 존재였다</a><br>
 
   <a href="https://www.youtube.com/watch?v=3F7QoTcqSTg" title="Red Pig Academy">
     유비는 착한 쪼다가 아니다[임용한의 진짜 三國志_15]유비도 계획이 있었다</a><br>
@@ -232,12 +244,22 @@
     황제 유방과 국사무쌍 한신</a><br>
 
   <a href="https://www.youtube.com/watch?v=Rrtlf7u9bew" title="별별역사">
-    3만으로 56만 대군을 궤멸시킨 전투, 항우의 팽성 대전</a><br>
+    3만으로 56만 대군을 궤멸시킨 전투, 항우의 팽성 대전</a><br><br><br>
 
+
+
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
 
 
   <br><br><br>
+
+
 
   <ul style="background-color:#21618C" class="table">
     <font size="6">INVENTORY</font>
