--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -47,14 +47,92 @@
   <div id="contents">
     <img src="이길수있습니다.jpeg" width="100%">
 
-    <h1>夫學須靜也 才須學也</h1><br><br><br>
+
+  <h1>夫學須靜也 才須學也[Lv.1]</h1><br><br><br>
 
 
 
 
-  <h3>[현지 조달이 전략이다]</h3>
+  <a><h3>[성을 공격하는 것은 하책 중의 하책]</h3></a>
+    <p>
 
-    <p>故智將務食於敵(고지장무식어적)<br>
+      故上兵伐謀(고상병벌모)<br>
+      그러므로 상책의 용병은 (적의) 모략을 공격하는 것이며,<br><br>
+
+      其次伐交(기차벌교)<br>
+      차선책은 외교관계를 공격하는 것이고,<br><br>
+
+      其次伐兵(기차벌병)<br>
+      그 다음은 군대를 공격하는 것이며<br><br>
+
+      其下攻城(기하공성)<br>
+      최하의 방법은 성을 공격하는 것이다.<br><br>
+
+      攻城之法(공성지법) 爲不得已(위부득이)<br>
+      성을 공격하는 것은 어쩔 수 없는 경우에 사용하는데,<br><br>
+
+      修櫓轒轀(수노분온) 具器械(구기계) 三月而后成(삼월이후성)<br>
+      노와 분온을 수리하고 기구를 갖추는 데에만 석 달이 지나서야 완성된다<br><br>
+
+      距堙(거인) 又三月而后已(우삼월이후이)<br>
+      성을 공격하기 위한 토산을 쌓는 데에만 또 석 달이 소요된다.<br><br>
+
+      將不勝其忿(장부승기분)  而蟻附之(이의부지) 殺士三分之一(살사삼분지일) 而城不拔者(이성부발자)<br>
+      장수가 그의 분함을 이기지 못하고 (병사들에게) 개미처럼성벽을 공격하게 하여 병사의 3분의 1이나 죽게 만들고도 성은 함락시키지 못하니,<br><br>
+
+      此攻之災也(차공지재야)<br>
+      이는 공격하는 것의 재앙이다.<br><br>
+
+      故善用兵者(고선용병자) 屈人之兵(굴인지병) 而非戰也(이비전야)<br>
+      따라서 용병을 잘하는 자는 적의 군대를 굴복시키지만 전쟁은 하지 않고,<br><br>
+
+      拔人之城(발인지성) 而非攻也(이비공야)<br>
+      적의 성을 함락시키지만 공격은 하지 않으며<br><br>
+
+      毁人之國(훼인지국) 而非久也(이비구야)<br>
+      적의 나라를 무너뜨리지만 질질 끌지는 않고,<br><br>
+
+      必以全爭於天下(필이전쟁어천하) 故兵不頓(고병부돈) 而利可全(이리가전)<br>
+      반드시 (적을) 온전하게 하여 천하를 다투므로 군대는 무뎌지지 않으면서 이익은 정말로 온전해지니,<br><br>
+
+      此謀攻之法也(차모공지법야)<br>
+      이것이야말로 지모로써 성을 공격하는 방법이다.<br><br>
+    </p><br>
+
+
+  <a><h3>[싸우지 않고 이기는 것이 최상책이다]</h3></a>
+
+    <p>
+      孫子曰(손자왈) 凡用兵之法(범용병지법)<br>
+      손자는 말한다. 대체로 용병의 원칙에는<br><br>
+
+      全國爲上(전국위상) 破國次之(파국차지)<br>
+      (적의) 국가를 온전히 하는 것을 상책으로 삼으며, 적국을 쳐부수는 것을 차선책으로 삼는다.<br><br>
+
+      全軍爲上(전군위상) 破軍次之(파군차지)<br>
+      (적국의) 군을 온전히 한 채 이기는 것이 상책이며, 군을 무찌르는 것은 차선책이다.<br><br>
+
+      全旅爲上(전려위상) 破旅次之(파려차지)<br>
+      (적의) 여를 온전히 한 채 이기는 것이 상책이며, 여를 무찌르는 것은 차선책이다.<br><br>
+
+      全卒爲上(전졸위상) 破卒次之(파졸차지)<br>
+      (적의) 졸을 온전히 한 채 이기는 것이 상책이며, 졸을 무찌르는 것은 차선책이다.<br><br>
+
+      全伍爲上(전오위상) 破伍次之(파오차지)<br>
+      (적의) 오를 온전히 한 채 이기는 것이 상책이며, 졸을 무찌르는 것은 차선책이다.<br><br>
+
+      是故百戰百勝(시고백전백승) 非善之善者也(비선지선자야)<br>
+      그러므로 백 번 싸워 백 번 이기는 것이 잘된 것 중에 잘된 용병이 아니며,<br><br>
+
+      不戰而屈人之兵(부전이굴인지병) 善之善者也(선지선자야)<br>
+      싸우지 않고 적을 굴복시키는 용병이 잘된 것 중의 잘 된 용병이다.<br><br>
+    </p><br>
+
+
+  <a><h3>[현지 조달이 전략이다]</h3></a>
+
+    <p>
+      故智將務食於敵(고지장무식어적)<br>
       그러므로 지혜로운 장수는 적으로부터 식량을 빼앗는데 힘쓴다.<br><br>
 
       食敵一鐘(식적일종) 當吾二十鐘(당오이십종)<br>
@@ -65,7 +143,7 @@
     </p><br>
 
 
-  <h3>[장기전의 폐해]</h3>
+  <a><h3>[장기전의 폐해]</h3></a>
 
     <p>
       國之貧於師者遠輸(국지빈어사자원수)<br>
@@ -103,7 +181,7 @@
     </p><br>
 
 
-  <h3>[식량은 적지에서 충당하라]</h3>
+  <a><h3>[식량은 적지에서 충당하라]</h3></a>
 
     <p>
       善用兵者(선용병자)<br>
@@ -126,7 +204,7 @@
     </p><br>
 
 
-  <h3>[질질 끌면 패망한다]</h3>
+  <a><h3>[질질 끌면 패망한다]</h3></a>
 
     <p>
       其用戰也貴勝(기용전야귀승)<br>
@@ -167,7 +245,7 @@
     </p><br>
 
 
-  <h3>[비용을 계산하라]</h3>
+  <a><h3>[비용을 계산하라]</h3></a>
 
     <p>
       孫子曰(손자왈) 凡用兵之法(범용병지법) 馳車千駟(치거천사) 革車千乘(혁거천승) 帶甲十萬(대갑십만) 千里饋糧(천리궤량)<br>
@@ -178,7 +256,7 @@
     <p><br>
 
 
-  <h3>[싸우기 전에 계산하라]</h3>
+  <a><h3>[싸우기 전에 계산하라]</h3></a>
 
     <p>
       夫未戰而廟算勝者(부미전이묘산승자) 得算多也(득산다야)<br>
@@ -198,7 +276,7 @@
     </p><br>
 
 
-  <h3>[전쟁은 속임수이다]</h3>
+  <a><h3>[전쟁은 속임수이다]</h3></a>
 
     <p>
       勢者(세자) 因利而制權也(인리이제권야)<br>
@@ -257,7 +335,7 @@
     </p><br>
 
 
-  <h3>[전쟁 전 가늠해야 할 일곱 가지]</h3>
+  <a><h3>[전쟁 전 가늠해야 할 일곱 가지]</h3></a>
 
     <p>
       故校之以七計, 而塞其情. 曰:<br>
@@ -289,7 +367,7 @@
     </p><br>
 
 
-  <h3>[전쟁 전 헤아려야 할 다섯 가지]</h3>
+  <a><h3>[전쟁 전 헤아려야 할 다섯 가지]</h3></a>
 
     <p>
       故經之以五事, 校之以七計, 而索其情.<br>
@@ -319,7 +397,7 @@
     </p><br>
 
 
-  <h3>[노자도덕경 제 30장]</h3>
+  <a><h3>[노자도덕경 제 30장]</h3></a>
 
     <p>
       以道佐人主者   이도좌인주자<br>
@@ -375,14 +453,14 @@
   </p><br>
 
 
-  <h3>[전쟁은 존망을 결정한다]</h3>
+  <a><h3>[전쟁은 존망을 결정한다]</h3></a>
 
     <p>
       孫子曰: 兵者, 國之大事. 死生之地, 存亡之道, 不可不察也.<br>
       손자는 말한다. 전쟁이란 나라의 중대한 일이다. 죽음과 삶의 문제이며, 존립과 패망의 길이니, 살피지 않을 수 없다.
     </p><br>
 
-  [Fabuarary 1st, 2020]
+  <a>[Fabuarary 1st, 2020]</a>
 
     <p>
       的/很/好/坏/大/小/贵/便宜/难/容易/汉语<br>
@@ -392,37 +470,48 @@
     </p><br>
 
 
-  [January 31th, 2020]
+  <a>[January 31th, 2020]</a>
 
     <p>
       我/你/他/她/们/中国/韩国/人/我们/你们/他们/她们/中国人/韩国人<br>
       你好/谢谢/不客气/对不起/不要紧/再见<br>
       我是韩国人/我是我你是你/谢谢你
-    </p>
+    </p><br><br><br>
 
 
 
-      <br><br>
+  <script>
+    var exp = document.querySelectorAll('#contents > a');
+    var level = exp.length/10 - (exp.length%10)/10;
+    document.write("EXP: " + exp.length + "<br>");
+    document.write("LEVEL: " + level);
+  </script>
 
-      <ul style="background-color:#21618C" class="table">
-        <font size="6">INVENTORY</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-        <br>
-        <font size="6">STATUS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-        <br>
-        <font size="6">SKILLS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="active">夫學須靜也 才須學也</a></font></li>
-      </ul>
+
+
+  <br><br><br>
+
+
+
+  <ul style="background-color:#21618C" class="table">
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <br>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="active">夫學須靜也 才須學也</a></font></li>
+  </ul>
   </div>
 </div>
 
